<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/tv16sp"
                    android:text="@string/tengiaodich" />

                <TextView
                    android:id="@+id/tvNameEn"
                    style="@style/tv16sp"
                    android:layout_marginLeft="20dp"
                    android:text="" />

                <include layout="@layout/line"></include>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/tv16sp"
                    android:text="@string/chusohuu" />

                <TextView
                    android:id="@+id/tvBoss"
                    style="@style/tv16sp"
                    android:layout_marginLeft="20dp"
                    android:text="" />

                <include layout="@layout/line"></include>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tv16sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/masothue" />

                    <TextView
                        android:id="@+id/btMst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/selector_blue"
                        android:clickable="true"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:text="@string/copy_mst"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvCode"
                    style="@style/tv16sp"
                    android:layout_marginLeft="20dp"
                    android:text="" />

                <include layout="@layout/line"></include>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tv16sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/diachi" />

                    <TextView
                        android:id="@+id/btAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/selector_blue"
                        android:clickable="true"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:text="@string/view_google_map"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tvCity"
                    style="@style/tv16sp"
                    android:layout_marginLeft="20dp"
                    android:text="" />

                <include layout="@layout/line"></include>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/tv16sp"
                    android:text="@string/noidangkyquanly" />

                <TextView
                    android:id="@+id/tvAddress"
                    style="@style/tv16sp"
                    android:layout_marginLeft="20dp"
                    android:text="" />

                <include layout="@layout/line"></include>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    style="@style/tv16sp"
                    android:text="@string/nganhnghechinh" />

                <TextView
                    android:id="@+id/tvBusiness"
                    style="@style/tv16sp"
                    android:layout_marginLeft="20dp"
                    android:text="" />

                <include layout="@layout/line"></include>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tv16sp"
                    android:text="@string/ngaythanhlap" />

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/tv16sp"
                    android:layout_marginLeft="20dp"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>


        <include layout="@layout/line"></include>
    </RelativeLayout>

</ScrollView>
